Support filtering and donwloading data table to generic_model_list.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -243,6 +243,8 @@
     <!-- Custom Theme Scripts -->
     <script src="{% static "build/js/custom.min.js" %}"></script>
 
+    <!-- Table To Csv Downloader Script-->
+    <script src="{% static "build/js/table2csv.js" %}"></script>
 
 </body>
 
