Show mistakes with safe filter

--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -85,7 +85,7 @@
                             </table>
                             {% trans 'اشتباهات' %}:
                             <div class="signal-mistakes">
-                                {{signal.mistakes}}
+                                {{signal.mistakes|safe}}
                             </div>
                         </div>
                     </div>
