--- a/cfd/templates/gentelella/signal_form.html
+++ b/cfd/templates/gentelella/signal_form.html
@@ -324,6 +324,27 @@
                 </div>
             </div>
 
+            <!-- 8 Self entrance -->
+            <div class="form-group">
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.12.id_for_label}}">{{form.visible_fields.12.label}}{% if form.visible_fields.12.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    {{ form.visible_fields.12 }}
+                    {% if form.visible_fields.12.help_text %}
+                    <small class="form-text text-muted">{{ form.visible_fields.12.help_text }}</small>
+                    {% endif %}
+                    {% if form.is_bound %}
+                    {% if form.visible_fields.12.errors %}
+                    {% for error in form.visible_fields.12.errors %}
+                    <div class="invalid-feedback">
+                        {{ error }}
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+
+
 
 
 
