Improve PTA analysis info

--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -305,6 +305,7 @@
                                             <tr><td>{% trans 'تعداد بازگشت از ناحیه' %}</td><td>{{signal.pta_analysis.zone_rejects}}</td></tr>
                                             <tr><td>{% trans 'الگو' %}</td><td>{{signal.pta_analysis.get_pattern_display}}</td></tr>
                                             <tr><td>{% trans 'سناریو' %}</td><td>{{signal.pta_analysis.get_scenario_display}}</td></tr>
+                                            <tr><td>{% trans 'روش ورود' %}</td><td>{{signal.pta_analysis.get_entrance_display}}</td></tr>
                                         </table>
                                     </div>
                                     <div class="col-md-6">
