--- a/cfd/templates/gentelella/classic_analysis.html
+++ b/cfd/templates/gentelella/classic_analysis.html
@@ -1418,7 +1418,7 @@
                             {% endif %}
                         </td>
                     </tr>
-                    <!-- ATX -->
+                    <!-- ADX -->
                     <tr>
                         <td>
                             <label class="control-label" for="{{form.visible_fields.56.id_for_label}}">
