--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -276,10 +276,10 @@
                                         </tr>
                                         <!-- ATX -->
                                         <tr>
-                                            <td>{% trans 'ATX' %}</td>
-                                            <td colspan="4">{{signal.classic_analysis.atx}}</td>
-                                            <td>{{signal.classic_analysis.get_atx_timeframe_display}}</td>
-                                            <td>{{signal.classic_analysis.get_atx_signal_display}}</td>
+                                            <td>{% trans 'ADX' %}</td>
+                                            <td colspan="4">{{signal.classic_analysis.adx}}</td>
+                                            <td>{{signal.classic_analysis.get_adx_timeframe_display}}</td>
+                                            <td>{{signal.classic_analysis.get_adx_signal_display}}</td>
                                         </tr>
                                     </table>
                                 </div>
