--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -317,6 +317,9 @@
                                             <tr><td>{% trans 'روند' %}</td><td>{{signal.pta_analysis.get_impulsive_direction_display}}</td></tr>
                                             <tr><td>{% trans 'تعداد بازگشت از ناحیه' %}</td><td>{{signal.pta_analysis.zone_rejects}}</td></tr>
                                             <tr><td>{% trans 'الگو' %}</td><td>{{signal.pta_analysis.get_pattern_display}}</td></tr>
+                                            <tr><td>{% trans 'فشارخوانی' %}</td><td>
+                                                {% if signal.pta_analysis.candle_pressure %}{% trans 'بله' %}{% else %}{% trans 'خیر' %}{% endif %}
+                                            </td></tr>
                                             <tr><td>{% trans 'سناریو' %}</td><td>{{signal.pta_analysis.get_scenario_display}}</td></tr>
                                             <tr><td>{% trans 'روش ورود' %}</td><td>{{signal.pta_analysis.get_entrance_display}}</td></tr>
                                         </table>
