Fix issue on showing noimage.png in pta analysis

--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -331,7 +331,7 @@
                                                     <img src="{{signal.pta_analysis.image_url}}" />
                                                 </a>
                                             {% else %}
-                                                <img src={% static "cfd/images/noimg.png" %}/>
+                                                <img src="{% static "cfd/images/noimg.png" %}" />
                                             {% endif %}
                                         </div>
                                     </div>                            
