Add trend line to classic analysis

--- a/cfd/templates/gentelella/signal_info.html
+++ b/cfd/templates/gentelella/signal_info.html
@@ -179,6 +179,11 @@
                                             <td>{{signal.classic_analysis.get_intermediate_trend_signal_display}}</td>
                                         </tr>
                                         <tr>
+                                            <td>{% trans 'خط روند' %}</td>
+                                            <td colspan="5">{{signal.classic_analysis.get_trend_line_display}}</td>
+                                            <td>{{signal.classic_analysis.get_trend_line_signal_display}}</td>
+                                        </tr>
+                                        <tr>
                                             <td>{% trans 'الیوت' %}</td>
                                             <td colspan="5">{{signal.classic_analysis.get_eliot_display}}</td>
                                             <td>{{signal.classic_analysis.get_eliot_signal_display}}</td>
