--- a/cfd/templates/gentelella/classic_analysis.html
+++ b/cfd/templates/gentelella/classic_analysis.html
@@ -501,6 +501,45 @@
                             {% endif %}
                         </td>
                     </tr>
+                    <!-- Trend Line -->
+                    <tr>
+                        <td>
+                            <label class="control-label" for="{{form.visible_fields.68.id_for_label}}">
+                            {{form.visible_fields.68.label}}
+                            {% if form.visible_fields.68.field.required %}<span class="required"> *</span>{% endif %}
+                            </label>
+                        </td>
+                        <td colspan="2">
+                            {{ form.visible_fields.68 }}
+                            {% if form.visible_fields.68.help_text %}
+                                <small class="form-text text-muted">{{ form.visible_fields.68.help_text }}</small>
+                            {% endif %}
+                            {% if form.is_bound %}
+                                {% if form.visible_fields.68.errors %}
+                                    {% for error in form.visible_fields.68.errors %}
+                                    <div class="invalid-feedback">
+                                        {{ error }}
+                                    </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endif %}
+                        </td>
+                        <td>
+                            {{ form.visible_fields.69 }}
+                            {% if form.visible_fields.69.help_text %}
+                                <small class="form-text text-muted">{{ form.visible_fields.69.help_text }}</small>
+                            {% endif %}
+                            {% if form.is_bound %}
+                                {% if form.visible_fields.69.errors %}
+                                    {% for error in form.visible_fields.69.errors %}
+                                    <div class="invalid-feedback">
+                                        {{ error }}
+                                    </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endif %}
+                        </td>
+                    </tr>
                     <!-- Pattern -->
                     <tr>
                         <td>
@@ -1517,13 +1556,13 @@
         fields.push($("input[name='pattern_signal']:checked").val());
         fields.push($("input[name='moving_signal']:checked").val());
         fields.push($("input[name='pivot_signal']:checked").val());
+        fields.push($("input[name='trend_line_signal']:checked").val());
         fields.push($("input[name='fibo_signal']:checked").val());
         fields.push($("input[name='time_divergent_signal']:checked").val());
         fields.push($("input[name='candle_signal']:checked").val());
         fields.push($("input[name='momentum_family_signal']:checked").val());
         fields.push($('select[name=atr_signal]').val());
         fields.push($('select[name=adx_signal]').val());
-        fields.push($('select[name=stochastic_signal]').val());
 
         fields.forEach(f => {
             switch (f) {
@@ -1537,6 +1576,7 @@
                     n++; 
                     break;
                 default:
+                    n++;
                     break;
             }
         });
