Support for extra_script in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -246,6 +246,8 @@
     <!-- Table To Csv Downloader Script-->
     <script src="{% static "build/js/table2csv.js" %}"></script>
 
+    <!-- Extra Scripts -->
+    {% block extra_scripts %}{% endblock %}
 </body>
 
 </html>
