Add dmo summary in all_dmos.html

--- a/dmo/templates/gentellela/all_dmos.html
+++ b/dmo/templates/gentellela/all_dmos.html
@@ -62,6 +62,7 @@
                         <div class="dmo-mini-info">
                             <h5>{{dmo.goal}}</h5>
                             <span class="dmo-{{dmo.type}}">{{dmo.type_display}}</span>
+                            <div class="dmo-summary">{{dmo.summary|safe}}</div>
                         </div>
                         <div class="dmo-mini-table">
                             <table>
